# cpp-CI-and-coverage

./: .appveyor.yml  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  appveyor.yml  circle.yml
src/: CMakeLists.txt  adder.cpp  adder.h  dummy.cpp
test/: CMakeLists.txt  demo_test.cpp
